<resources>
    <string name="app_name">Study Tracker</string>
    <string name="tvWelcome">Welcome!</string>
    <string name="tvNavigation">Navigation:</string>
    <string name="tvHome">Home</string>
    <string name="tvProfile">Edit Profile</string>
    <string name="tvProfilePicture">Profile Picture:</string>
    <string name="tvName">Your name:</string>
    <string name="etName">enter your name...</string>
    <string name="btnSave">Save your preferences</string>
    <string name="btnClear">Clear your preferences</string>
    <string name="btnHome">Return to home page</string>
    <string name="etSubject">enter a subject...</string>
    <string name="etNotes">enter notes here...</string>
    <string name="btnAddTest">Add a new exam</string>
    <string name="tvSubject">Test subject:</string>
    <string name="tvDate">Test date:</string>
    <string name="tvNotes">Notes (optional):</string>
    <string name="btnPickDate">Select date</string>
    <string name="btnSaveTest">Save Test Entry</string>
    <string name="btnReturn">Return to tracker</string>
    <string name="tvTimer">Timer</string>
    <string name="tvDisplayTimer">00:00</string>
    <string name="tvEnterTime">Enter time (minutes):</string>
    <string name="etTime">enter minutes here...</string>
    <string name="tvTimeSec">Enter time (seconds):</string>
    <string name="etTimeSec">enter seconds here...</string>
    <string name="btnStart">Start timer</string>
    <string name="btnReset">Reset timer</string>
</resources>